Updates code to handle the scenarios where csv can have multiple trips for a single pan, hence sorting the data before processing